--- a/1-JavaScript/index.html
+++ b/1-JavaScript/index.html
@@ -14,15 +14,52 @@
     <img class="profile" src="./assets/img.jpg" />
 
     <div class="name">
-    <p>Maria Clara dos Santos</p>
-    <p>Software Developer</p>
+      <p>MARIA CLARA DOS SANTOS</p>
+      <p>DEVELOPER</p>
     </div>
 
     <div class="info-container">
-      <div class="content">
+      <div class="info-container-text">
+        <p class="text-info-card"> Hi, I'm Maria Clara, I'm 18 years old and I'm a software developer at Philips.
+          I started in the technology area in my high school, along with a technical
+          course, at Instuto Federal de Santa Catarina - IFSC. There I learned about
+          programming, arduinos, robotics, and many cool things, like set off rockets.
+          Now, I'
+          m doing my undergraduate degree, with the Computer Science course.
+          I work as a Software developer at Philips, where I started as an intern
+        </p>
+      </div>
+      <div class="info-container-text">
+        <p class="text-info-card"> I'm doing a personal project now, with 90 days coding every day, this is a link
+          for my repository. In these 90 days, I want to study JavaScript, React, Backend,
+          Python, DJango, PowerShell, Ionic, Flutter with Firebase and Unity.
+          This page, ia my project for JavaScript.
+        </p>
+      </div>
+      <div class="info-container-text">
+        <p class="text-info-card">
+          I've done some cool projects in the past, like:
+        </br>
+          Project 1
+        </br>
+          Project 2
+        </br>
+          Project 3
+        </br>
+          Project 4
+        </br>
+          If you want to know any of them, just click on their name, or access my
+          github
+        </p>
       </div>
     </div>
+
+
   </div>
+
+
 </body>
+
+
 
 </html>
